--- a/core/components/settings/templates/about.html
+++ b/core/components/settings/templates/about.html
@@ -1,7 +1,16 @@
 <ion-view view-title="{{ 'mm.settings.about' | translate }}" >
     <ion-content mm-state-class>
         <ul class="list">
-            <li class="item">
+            <li class="item item-text-wrap">
+				<h2>Mobile App by:</h2>
+				<h2>Altoron Solutions Limited</h2>
+                <p><a href="https://www.altoron.com/" target="_blank">https://www.altoron.com/</a></p>
+            </li>
+			<li class="item item-text-wrap">				
+				<h2>Contact Us:</h2>
+				<p><a href="mailto:sales@altoron.com?Subject=eLearning%20Mobile%20App" target="_top">sales@altoron.com</a></p>
+            </li>
+			<li class="item">
                 <h2>{{appname}} {{versionname}}</h2>
             </li>
             <li class="item item-divider">
