--- a/core/components/sidemenu/templates/menu.html
+++ b/core/components/sidemenu/templates/menu.html
@@ -68,6 +68,15 @@
                             <i class="icon ion-log-out"></i>{{ logoutLabel | translate}}
                         </a>
                     </li>
+					<li class="item item-text-wrap">
+                        <h3>Mobile App by:</h3>
+						<h3>Altoron Solutions Limited</h3>
+						<p><a href="https://www.altoron.com/" target="_blank">https://www.altoron.com/</a></p>
+                    </li>
+					<li class="item item-text-wrap">
+                        <h3>Contact Us:</h3>
+						<p><a href="mailto:sales@altoron.com?Subject=eLearning%20Mobile%20App" target="_top">sales@altoron.com</a></p>
+                    </li>
                 </ul>
             </nav>
 
