--- a/core/components/sidemenu/templates/menu.html
+++ b/core/components/sidemenu/templates/menu.html
@@ -71,7 +71,7 @@
 					<li class="item item-text-wrap">
                         <h3>Mobile App by:</h3>
 						<h3>Altoron Solutions Limited</h3>
-						<p><a href="https://www.altoron.com/" target="_blank">https://www.altoron.com/</a></p>
+						<p><a href="https://www.altoron.com/" mm-link auto-login="no">https://www.altoron.com/</a></p>
                     </li>
 					<li class="item item-text-wrap">
                         <h3>Contact Us:</h3>
