--- a/core/components/settings/templates/about.html
+++ b/core/components/settings/templates/about.html
@@ -4,7 +4,7 @@
             <li class="item item-text-wrap">
 				<h2>Mobile App by:</h2>
 				<h2>Altoron Solutions Limited</h2>
-                <p><a href="https://www.altoron.com/" target="_blank">https://www.altoron.com/</a></p>
+                <p><a href="https://www.altoron.com/" mm-link auto-login="no">https://www.altoron.com/</a></p>
             </li>
 			<li class="item item-text-wrap">				
 				<h2>Contact Us:</h2>
