--- a/core/components/sidemenu/templates/menu.html
+++ b/core/components/sidemenu/templates/menu.html
@@ -47,36 +47,67 @@
                             <i class="icon {{item.icon}}"></i>{{item.label}}
                         </a>
                     </li>
-                    <li ng-if="showWeb">
+					<!--
+					<li ng-if="showWeb">
                         <a menu-close class="item item-icon-left" ng-href="{{siteinfo.siteurl}}" mm-link auto-login="yes" title="{{ 'mm.sidemenu.website' | translate}}">
                             <i class="icon ion-earth"></i>{{ 'mm.sidemenu.website' | translate}}
                         </a>
                     </li>
+					-->
+                    <li ng-if="showWeb">
+                        <a menu-close class="item item-icon-left" ng-href="https://www.absl.com.ng/edu/" mm-link auto-login="yes" title="ABSL Fashion portal">
+                            <i class="icon ion-earth"></i>ABSL Fashion portal
+                        </a>
+                    </li>
+					<li ng-if="showWeb">
+                        <a menu-close class="item item-icon-left" ng-href="https://www.absl.com.ng/" mm-link auto-login="no" title="ABSL Fashion website">
+                            <i class="icon ion-earth"></i>ABSL Fashion website
+                        </a>
+                    </li>
+					<li ng-if="showWeb">
+                        <a menu-close class="item item-icon-left" ng-href="mailto:info@absl.com.ng?Subject=eLearning%20Mobile%20App" mm-link auto-login="no" title="Email ABSL">
+                            <i class="icon ion-earth"></i>Email ABSL
+                        </a>
+                    </li>
+					<li ng-if="showWeb">
+                        <a menu-close class="item item-icon-left" ng-href="tel:+2348180005111" mm-link auto-login="no" title="Phone ABSL">
+                            <i class="icon ion-earth"></i>Phone ABSL
+                        </a>
+                    </li>
+					<!--
+					<li class="item item-text-wrap">
+                        <h3>Contact Us:</h3>
+						<p><a href="mailto:info@absl.com.ng?Subject=eLearning%20Mobile%20App" target="_top">info@absl.com.ng</a></p>
+                    </li>
+					-->
                     <li ng-if="showHelp">
                         <a menu-close class="item item-icon-left" ng-href="{{docsurl}}" mm-link auto-login="no" title="{{ 'mm.sidemenu.help' | translate}}">
                             <i class="icon ion-help-buoy"></i>{{ 'mm.sidemenu.help' | translate}}
                         </a>
                     </li>
-                    <li class="item item-divider"></li>
+                    <!--
+					<li class="item item-divider"></li>
+					-->
                     <li>
                         <a menu-close class="item item-icon-left" ui-sref="site.mm_settings" title="{{ 'mm.sidemenu.appsettings' | translate}}">
                             <i class="icon ion-gear-b"></i>{{ 'mm.sidemenu.appsettings' | translate}}
                         </a>
                     </li>
+					<li>
+                        <a menu-close class="item item-icon-left" ui-sref="site.mm_settings-about" title="{{ 'mm.settings.about' | translate}}">
+                            <i class="icon ion-gear-b"></i>{{ 'mm.settings.about' | translate}}
+                        </a>
+                    </li>
+					<!--
                     <li>
                         <a class="item item-icon-left" ng-click="logout()" title="{{ 'mm.sidemenu.changesite' | translate}}">
                             <i class="icon ion-log-out"></i>{{ logoutLabel | translate}}
                         </a>
                     </li>
+					-->					
 					<li class="item item-text-wrap">
-                        <h3>Mobile App by:</h3>
-						<h3>Altoron Solutions Limited</h3>
-						<p><a href="https://www.altoron.com/" mm-link auto-login="no">https://www.altoron.com/</a></p>
-                    </li>
-					<li class="item item-text-wrap">
-                        <h3>Contact Us:</h3>
-						<p><a href="mailto:sales@altoron.com?Subject=eLearning%20Mobile%20App" target="_top">sales@altoron.com</a></p>
-                    </li>
+						<h3>Powered by: <a href="https://www.altoron.com/" mm-link auto-login="no">Altoron.com</a></h3>						
+                    </li>					
                 </ul>
             </nav>
 
