--- a/core/components/sidemenu/templates/menu.html
+++ b/core/components/sidemenu/templates/menu.html
@@ -54,26 +54,7 @@
                         </a>
                     </li>
 					-->
-                    <li ng-if="showWeb">
-                        <a menu-close class="item item-icon-left" ng-href="https://www.absl.com.ng/edu/" mm-link auto-login="yes" title="ABSL Fashion portal">
-                            <i class="icon ion-earth"></i>ABSL Fashion portal
-                        </a>
-                    </li>
-					<li ng-if="showWeb">
-                        <a menu-close class="item item-icon-left" ng-href="https://www.absl.com.ng/" mm-link auto-login="no" title="ABSL Fashion website">
-                            <i class="icon ion-earth"></i>ABSL Fashion website
-                        </a>
-                    </li>
-					<li ng-if="showWeb">
-                        <a menu-close class="item item-icon-left" ng-href="mailto:info@absl.com.ng?Subject=eLearning%20Mobile%20App" mm-link auto-login="no" title="Email ABSL">
-                            <i class="icon ion-earth"></i>Email ABSL
-                        </a>
-                    </li>
-					<li ng-if="showWeb">
-                        <a menu-close class="item item-icon-left" ng-href="tel:+2348180005111" mm-link auto-login="no" title="Phone ABSL">
-                            <i class="icon ion-earth"></i>Phone ABSL
-                        </a>
-                    </li>
+                    
 					<!--
 					<li class="item item-text-wrap">
                         <h3>Contact Us:</h3>
@@ -104,7 +85,30 @@
                             <i class="icon ion-log-out"></i>{{ logoutLabel | translate}}
                         </a>
                     </li>
-					-->					
+					-->
+					<li class="item item-divider">
+						<h3>Contact ABSL Fashion Institute</h3>						
+                    </li>
+					<li ng-if="showWeb">
+                        <a menu-close class="item item-icon-left" ng-href="https://www.absl.com.ng/edu/" mm-link auto-login="yes" title="ABSL Fashion portal">
+                            <i class="icon ion-earth"></i>ABSL Fashion portal
+                        </a>
+                    </li>
+					<li ng-if="showWeb">
+                        <a menu-close class="item item-icon-left" ng-href="https://www.absl.com.ng/" mm-link auto-login="no" title="ABSL Fashion website">
+                            <i class="icon ion-earth"></i>ABSL Fashion website
+                        </a>
+                    </li>
+					<li ng-if="showWeb">
+                        <a menu-close class="item item-icon-left" ng-href="mailto:info@absl.com.ng?Subject=eLearning%20Mobile%20App" mm-link auto-login="no" title="Email ABSL Fashion">
+                            <i class="icon ion-earth"></i>Email ABSL Fashion
+                        </a>
+                    </li>
+					<li ng-if="showWeb">
+                        <a menu-close class="item item-icon-left" ng-href="tel:+2348180005111" mm-link auto-login="no" title="Phone ABSL Fashion">
+                            <i class="icon ion-earth"></i>Phone ABSL Fashion
+                        </a>
+                    </li>
 					<li class="item item-text-wrap">
 						<h3>Powered by: <a href="https://www.altoron.com/" mm-link auto-login="no">Altoron.com</a></h3>						
                     </li>					
