--- a/core/components/settings/templates/about.html
+++ b/core/components/settings/templates/about.html
@@ -14,7 +14,7 @@
             </li>
 			<li class="item item-text-wrap">				
 				<h2>Contact Us:</h2>
-				<h2><a href="mailto:sales@altoron.com?Subject=eLearning%20Mobile%20App" target="_top">sales@altoron.com</a></p></h2>
+				<h2><a href="mailto:enquiries@altoron.com" target="_top">enquiries@altoron.com</a></p></h2>
             </li>
 			<li class="item">
                 <h2>{{appname}} {{versionname}}</h2>
