--- a/core/components/settings/templates/about.html
+++ b/core/components/settings/templates/about.html
@@ -10,11 +10,11 @@
 			<li class="item item-text-wrap">				
 				<h2><a href="https://www.altoron.com/" mm-link auto-login="no">Built for ABSL Fashion Institute by:</a></h2>
 				<h2><a href="https://www.altoron.com/" mm-link auto-login="no">Altoron Solutions Limited</a></h2>
-                <h2><a href="https://www.altoron.com/" mm-link auto-login="no">www.altoron.com</a></p></h2>				
+                <h2><a href="https://www.altoron.com/" mm-link auto-login="no">www.altoron.com</a></h2>				
             </li>
 			<li class="item item-text-wrap">				
 				<h2>Contact Us:</h2>
-				<h2><a href="mailto:enquiries@altoron.com" target="_top">enquiries@altoron.com</a></p></h2>
+				<h2><a href="mailto:enquiries@altoron.com" target="_top">enquiries@altoron.com</a></h2>
             </li>
 			<li class="item">
                 <h2>{{appname}} {{versionname}}</h2>
